Use PEP 517 for building if supported (3/10)

--- a/mingw-w64-python-black/PKGBUILD
+++ b/mingw-w64-python-black/PKGBUILD
@@ -7,14 +7,15 @@ pkgver=24.10.0
 pkgrel=2
 pkgdesc='Uncompromising Python code formatter (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url="https://black.readthedocs.io/"
+msys2_repository_url="https://github.com/psf/black"
 msys2_references=(
   'pypi: black'
 )
-url="https://black.readthedocs.io/"
-msys2_repository_url="https://github.com/psf/black"
 license=('spdx:MIT')
-depends=("${MINGW_PACKAGE_PREFIX}-python-click"
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-click"
          "${MINGW_PACKAGE_PREFIX}-python-mypy_extensions"
          "${MINGW_PACKAGE_PREFIX}-python-packaging"
          "${MINGW_PACKAGE_PREFIX}-python-pathspec"
