--- a/mingw-w64-python-click/PKGBUILD
+++ b/mingw-w64-python-click/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=8.1.8
 pkgrel=1
 pkgdesc='A simple wrapper around optparse for powerful command line utilities (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://click.palletsprojects.com/"
 msys2_references=(
   'pypi: click'
@@ -19,15 +19,15 @@ depends=(
   "${MINGW_PACKAGE_PREFIX}-python-colorama"
 )
 makedepends=(
-  "${MINGW_PACKAGE_PREFIX}-python-flit-core"
   "${MINGW_PACKAGE_PREFIX}-python-build"
   "${MINGW_PACKAGE_PREFIX}-python-installer"
+  "${MINGW_PACKAGE_PREFIX}-python-flit-core"
   "${MINGW_PACKAGE_PREFIX}-python-pallets-sphinx-themes"
   "${MINGW_PACKAGE_PREFIX}-python-sphinxcontrib-log-cabinet"
   "${MINGW_PACKAGE_PREFIX}-python-sphinx-issues"
   "${MINGW_PACKAGE_PREFIX}-python-sphinx-tabs"
 )
-source=("${_realname}-$pkgver.tar.gz::https://github.com/pallets/click/archive/${pkgver}.tar.gz")
+source=("https://github.com/pallets/click/archive/${pkgver}/${_realname}-$pkgver.tar.gz")
 sha512sums=('f9f501210d202026a8449df1eef570f5399887a3efda9499d4a4180bbe96bc232809929bf80f9a65037583e84dfa8af3f0c348353c41121c815a9ead2c58d3aa')
 
 prepare() {
