--- a/mingw-w64-python-pytest-black/PKGBUILD
+++ b/mingw-w64-python-pytest-black/PKGBUILD
@@ -7,11 +7,11 @@ pkgver=0.6.0
 pkgrel=1
 pkgdesc='A pytest plugin to enable format checking with black (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/coherent-oss/pytest-black'
 msys2_references=(
   'pypi: pytest-black'
 )
-url='https://github.com/coherent-oss/pytest-black'
 license=('spdx:MIT')
 depends=(
   "${MINGW_PACKAGE_PREFIX}-python"
