--- a/mingw-w64-python-pytest-enabler/PKGBUILD
+++ b/mingw-w64-python-pytest-enabler/PKGBUILD
@@ -7,11 +7,11 @@ pkgver=3.3.0
 pkgrel=2
 pkgdesc='Enable installed pytest plugins (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url="https://github.com/jaraco/pytest-enabler"
 msys2_references=(
   'pypi: pytest-enabler'
 )
-url="https://github.com/jaraco/pytest-enabler"
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-jaraco.context"
