--- a/mingw-w64-python-setuptools-git/PKGBUILD
+++ b/mingw-w64-python-setuptools-git/PKGBUILD
@@ -1,35 +1,40 @@
 # Maintainer: @naveen521kk on Github, Naveen M K <naveen521kk@gmail.com>
+
 _pyname=setuptools-git
 _realname=setuptools-git
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=1.2
-pkgrel=5
+pkgrel=6
 pkgdesc="Setuptools revision control system plugin for Git (mingw-w64)"
-url="https://pypi.org/project/setuptools-git/"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url="https://github.com/msabramo/setuptools-git"
 msys2_references=(
   'archlinux: python-setuptools-git'
   'pypi: setuptools-git'
 )
-license=('BSD')
+license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
         'git')
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=(
-  "${_pyname}-${pkgver}.tar.gz::https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz"
+  "https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz"
   "0001-use-git-show-prefix.patch"
 )
-sha512sums=('c070911618b6b92c862fb0bd40f1daeaf79e2ba10389fa1e69e4c50cfdd39c8e57a612082cbc7d932f8cea12a769e13451e35e1c8fe34f170d4817fd0d44f156'
-            '99d8cfe019f610a82af8ce69a83a08cb754d7ff40b55e7545aef35308486353a22a22b7057c2b39632fb59a39c396765fef0cce69149d80387657e103be8ac33')
+sha256sums=('ff64136da01aabba76ae88b050e7197918d8b2139ccbf6144e14d472b9c40445'
+            '8b3874cff964543de07eca3c22fa01d009fa8769abe8a6035278371fe1ee35e2')
 
 prepare() {
   cd "${_pyname//_/-}-$pkgver"
   patch -p1 -i "${srcdir}"/0001-use-git-show-prefix.patch
-  cd "${srcdir}"
-  rm -rf python-build-${MSYSTEM}
-  cp -r "${_pyname//_/-}-$pkgver" "python-build-${MSYSTEM}"
+}
+
+build() {
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 check(){
@@ -37,13 +42,10 @@ check(){
   ${MINGW_PREFIX}/bin/python -m unittest || true
 }
 
-build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
-}
-
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --root="${pkgdir}" --prefix=${MINGW_PREFIX} --optimize=1 --skip-build
+  cd "${srcdir}"/python-build-${MSYSTEM}
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 }
