--- a/mingw-w64-python-smartypants/PKGBUILD
+++ b/mingw-w64-python-smartypants/PKGBUILD
@@ -4,7 +4,7 @@ _realname=smartypants
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=2.0.1
-pkgrel=7
+pkgrel=8
 pkgdesc="Python with the SmartyPants (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -12,14 +12,15 @@ url='https://github.com/leohemsted/smartypants.py'
 msys2_references=(
   'pypi: smartypants'
 )
-license=('BSD')
+license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python"
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
-source=("${_realname}-${pkgver}.tar.gz"::"https://github.com/leohemsted/${_realname}.py/archive/v${pkgver}.tar.gz"
+source=("https://github.com/leohemsted/${_realname}.py/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
         fix-tests.patch)
-sha512sums=('d47a866a5478c3520251f87a93a468a5eea10318b24b2e8d4bc918d533b5a5789aa56d3a8d5fb8ccff9572fb63e5b6f2eafc44f93fb57a19e6621ebef5d64d9d'
-            '5682372429475244d6a8116496933e6d4e52511fec273cbb103b945ffd915c909cc460e26ede080b0f18ef51175e7adcdbc30d7f3aabb06b2c73465a0cf96125')
+sha256sums=('b98191911ff3b4144ef8ad53e776a2d0ad24bd508a905c6ce523597c40022773'
+            'a42486d450a6d94cc4377fc189cbd2c6faee814a036b5f866f7fa1e2d4c6983a')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -29,34 +30,17 @@ apply_patch_with_msg() {
     patch -Nbp1 -i "${srcdir}/$_patch"
   done
 }
-
-del_file_exists() {
-  for _fname in "$@"
-  do
-    if [ -f $_fname ]; then
-      rm -rf $_fname
-    fi
-  done
-}
 # =========================================== #
 
 prepare() {
-  cd "${srcdir}"
-  pushd "${_realname}.py-${pkgver}"
-    apply_patch_with_msg fix-tests.patch
-  popd
-
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}.py-${pkgver}" "python-build-${MSYSTEM}"
-
-  # Set version for setuptools_scm
-  export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
+  cd "${srcdir}"/"${_realname}.py-${pkgver}"
+  apply_patch_with_msg \
+    fix-tests.patch
 }
 
 build() {
-  msg "Python build for ${MSYSTEM}"  
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}.py-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 check() {
@@ -66,10 +50,11 @@ check() {
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  cd "${srcdir}"/python-build-${MSYSTEM}
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 COPYING "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/COPYING"
 
