--- a/mingw-w64-python-halo/PKGBUILD
+++ b/mingw-w64-python-halo/PKGBUILD
@@ -7,12 +7,12 @@ pkgver=0.0.31
 pkgrel=4
 pkgdesc="Beautiful terminal spinners in Python (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/ManrajGrover/halo'
 msys2_references=(
   'pypi: halo'
 )
-url='https://github.com/ManrajGrover/halo'
-license=('MIT')
+license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-log_symbols"
          "${MINGW_PACKAGE_PREFIX}-python-six"
