--- a/mingw-w64-python-sphinxcontrib-log-cabinet/PKGBUILD
+++ b/mingw-w64-python-sphinxcontrib-log-cabinet/PKGBUILD
@@ -4,31 +4,26 @@ _realname=sphinxcontrib-log-cabinet
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=1.0.1
-pkgrel=3
+pkgrel=4
 pkgdesc="Organize changelog directives in Sphinx docs (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-license=('BSD')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/davidism/sphinxcontrib-log-cabinet'
 msys2_references=(
   'pypi: sphinxcontrib-log-cabinet'
 )
+license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-sphinx")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
-source=("${_realname}-${pkgver}.tar.gz::${url}/archive/${pkgver}.tar.gz")
-sha256sums=('dcb40fcbb511f7a182b2642e7b4722e043a4923469f04d1bda7e3ad08e114881')
-
-prepare() {
-  cd "${srcdir}/${_realname}-${pkgver}"
-
-  rm -rf "${srcdir}/python-build-${MSYSTEM}" | true
-  cp -r "${srcdir}/${_realname}-${pkgver}" "${srcdir}/python-build-${MSYSTEM}"
-}
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('103b2e62df4e57abb943bea05ee9c2beb7da922222c8b77314ffd6ab9901c558')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 check() {
@@ -37,9 +32,11 @@ check() {
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-    ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} --root="${pkgdir}" -O1 --skip-build
+  cd "${srcdir}"/python-build-${MSYSTEM}
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 README.rst "${pkgdir}${MINGW_PREFIX}/share/doc/python-${_realname}/README.rst"
   install -Dm644 CHANGES.rst "${pkgdir}${MINGW_PREFIX}/share/doc/python-${_realname}/CHANGES.rst"
