Use PEP 517 for building if supported (10/10)

--- a/mingw-w64-python-pygments-docs/PKGBUILD
+++ b/mingw-w64-python-pygments-docs/PKGBUILD
@@ -10,13 +10,13 @@ pkgver=2.18.0
 pkgrel=1
 pkgdesc="Python syntax highlighter (mingw-w64) (documentation)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url="https://pygments.org/"
+msys2_repository_url="https://github.com/pygments/pygments"
 msys2_references=(
   'pypi: Pygments'
   "cpe: cpe:/a:pygments:pygments"
 )
-url="https://pygments.org/"
-msys2_repository_url="https://github.com/pygments/pygments"
 license=('spdx:BSD-2-Clause')
 makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-sphinx"
