--- a/mingw-w64-python-sphinxcontrib-log-cabinet/PKGBUILD
+++ b/mingw-w64-python-sphinxcontrib-log-cabinet/PKGBUILD
@@ -28,7 +28,7 @@ build() {
 
 check() {
   cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py test
+  ${MINGW_PREFIX}/bin/python -m pytest
 }
 
 package() {
