--- a/mingw-w64-styrene/PKGBUILD
+++ b/mingw-w64-styrene/PKGBUILD
@@ -3,40 +3,35 @@
 _realname=styrene
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
-conflicts=(${MINGW_PACKAGE_PREFIX}-${_realname}-git)
-replaces=(${MINGW_PACKAGE_PREFIX}-${_realname}-git)
 pkgver=0.3.0
-pkgrel=8
+pkgrel=9
 pkgdesc="Repacks MSYS2 packages into installer .exes and standalone .zips (mingw-w64)"
-url="https://github.com/achadwick/styrene"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64')
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
-depends=("zip"
-         "${MINGW_PACKAGE_PREFIX}-python"
-         "${MINGW_PACKAGE_PREFIX}-cc"
+mingw_arch=('mingw64' 'ucrt64')
+url="https://github.com/achadwick/styrene"
+license=('spdx:GPL-3.0-or-later')
+depends=("${MINGW_PACKAGE_PREFIX}-cc"
          "${MINGW_PACKAGE_PREFIX}-binutils"
-         "${MINGW_PACKAGE_PREFIX}-nsis")
-license=('GPLv3+')
-source=(${_realname}-${pkgver}.tar.gz::https://github.com/achadwick/styrene/archive/v${pkgver}.tar.gz)
+         "${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-nsis"
+         "zip")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+source=(https://github.com/achadwick/styrene/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz)
 sha256sums=('5b31beb1ee0fcb6518fe83eb1933b539a0583feae4b0eda942cb497101e3f6a4')
 
-prepare() {
-  cd "${srcdir}"/${_realname}-${pkgver}
-}
-
 build() {
-  cd "${srcdir}"/${_realname}-${pkgver}
-  rm -rf build
-  python3 setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}"/${_realname}-${pkgver}
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python3 setup.py install \
-    --prefix="${MINGW_PREFIX}" \
-    --root="${pkgdir}"
+  cd "${srcdir}"/python-build-${MSYSTEM}
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   # De-hardcode script paths
   local MINGW_PREFIX_W=$(cygpath -m "${MINGW_PREFIX}")
