--- a/mingw-w64-python-smartypants/PKGBUILD
+++ b/mingw-w64-python-smartypants/PKGBUILD
@@ -44,9 +44,8 @@ build() {
 }
 
 check() {
-  msg "Python test for ${MSYSTEM}"
   cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py test
+  ${MINGW_PREFIX}/bin/python -m pytest
 }
 
 package() {
